--- a/F6-resume-02-2016/scss/_settings.scss
+++ b/F6-resume-02-2016/scss/_settings.scss
@@ -81,7 +81,7 @@ $black: #0a0a0a;
 $ultra-white: #FFFFFF;
 $dirty-white: #FCFCFC;
 $white: #ECF0F1;
-$body-background: $dirty-white;
+$body-background: $medium-gray;
 $body-font-color: $black;
 $body-font-family: -apple-system, 'Lato', Helvetica, Arial, sans-serif;
 $body-antialiased: true;
