--- a/F6-resume-02-2016/scss/_header.scss
+++ b/F6-resume-02-2016/scss/_header.scss
@@ -127,7 +127,8 @@
 	perspective: 1100px;
 	perspective-origin: 50% 0;
 	> div {
-		background: $ka-4;
+		//background: $ka-4;
+		background: $ka-5;
 		text-align: center;
 		padding: 0 7%;
 		height: 100%;
