Minor CSS changes
Minor CSS changes

--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -465,7 +465,7 @@ section {
 	}
 	&.contact{
 		background-color: $ka-3;
-		//color: $ka-1;
+		color: $ka-1;
 		color: $ultra-white;
 		h3, p{
 			text-align:center;
@@ -485,8 +485,7 @@ section {
 			margin-right: auto !important;
 			margin-left: auto !important;
 			label{
-				//color: $ka-1 !important;
-				color: $ultra-white !important;
+				color: $ka-1 !important;
 				font-size: rem-calc(15);
 			}
 			::-webkit-input-placeholder {
