--- a/F6-resume-02-2016/scss/_styles.scss
+++ b/F6-resume-02-2016/scss/_styles.scss
@@ -486,6 +486,7 @@ section {
 			margin-left: auto !important;
 			label{
 				color: $ka-1 !important;
+				color: $ultra-white !important;
 				font-size: rem-calc(15);
 			}
 			::-webkit-input-placeholder {
