Added video to Sara's resume
Added video to Sara’s resume

--- a/sara_junio_16/scss/_settings.scss
+++ b/sara_junio_16/scss/_settings.scss
@@ -60,6 +60,7 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
+$ultra-white: #ffffff;
 $body-background: $white;
 $body-font-color: $black;
 $body-font-family: 'Open Sans', Helvetica, Arial, sans-serif;
