--- a/sara_junio_16/scss/_styles.scss
+++ b/sara_junio_16/scss/_styles.scss
@@ -27,9 +27,9 @@ body {
   letter-spacing: rem-calc(2);
 }
 
-h1, h3, h4, h5, h6 {
+h1{
+  color: $ultra-white;
   font-weight: 400;
-  color: $dark-gray;
 }
 
 h2, {
@@ -37,11 +37,18 @@ h2, {
   color: $primary-color;
 }
 
+h3, h4, h5, h6 {
+  font-weight: 400;
+  color: $dark-gray;
+}
+
 .nav-menu {
+  z-index: 999999;
   position: fixed;
-  min-height: rem-calc(44);
-  left: 0;
+  min-height: rem-calc(60);
+  top: 0;
   right: 0;
+  left: 0;
   background-color: rgba(255,255,255,0.85);
   border-bottom: rem-calc(1) solid $light-gray;
 }
@@ -52,6 +59,40 @@ h2, {
       &:hover{
         color: #2199e8;
       }
+    }
+  }
+}
+
+.main-heading{
+  padding-top: 11%;
+  z-index: 1000;
+  position: absolute;
+  //top: 35%;
+  width: 100%;
+  height: 100vh;
+  left: 0;
+  right: 0;
+  text-align: center;
+  color: $ultra-white;
+  p{
+    font-size: 120%;
+  }
+  .arrow {
+    //position: absolute;
+    z-index: 1000;
+    text-align: center;
+    //left: 0;
+    //bottom: 0;
+    //right: 0;
+    //margin-left: -15px;
+    a{
+      display: block;
+      border-right: 5px solid $medium-gray;
+      border-bottom: 5px solid $medium-gray;
+      width: 30px; 
+      height: 30px;
+      transform: rotate(42.5deg);
+      //animation: indicate 3s 3 forwards;
     }
   }
 }
@@ -83,7 +124,7 @@ h2, {
 
 section{
   &#heading, &#education, &#skills, &#experience {
-    min-height: 100vh;
+    //min-height: 100vh;
     p{
       margin-bottom: rem-calc(7);
     }
@@ -150,12 +191,12 @@ section{
    .p#{$k} { padding: rem-calc($k); }.ptb#{$k} { padding-top: rem-calc($k); padding-bottom: rem-calc($k); }.plr#{$k} { padding-left: rem-calc($k); padding-right: rem-calc($k); }.pt#{$k} { padding-top: rem-calc($k); }.pb#{$k} { padding-bottom: rem-calc($k); }.pl#{$k} { padding-left: rem-calc($k); }.pr#{$k} { padding-right: rem-calc($k); }
 }
 
-::-moz-selection { 
-  background-color: #BEF6A8; 
-}
-
 ::selection {
   background-color: #BEF6A8;
+}
+
+::-moz-selection { 
+  background-color: #BEF6A8; 
 }
 
 .strong{
@@ -167,6 +208,59 @@ section{
   height: 0; width: 0;
   overflow: none;
   left: -100%;
+}
+
+// Video styles
+
+.homepage-hero-module {
+  //margin-top: rem-calc(44);
+  border-right: none;
+  border-left: none;
+  position: relative;
+}
+.video-container {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background: transparent;
+  .filter {
+    z-index: 100;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.4);
+    height: 100%;
+  }
+  video {
+    position: absolute;
+    z-index: 2;
+    bottom: 0;
+    &.fillWidth {
+      width: 100%;
+    }
+  }
+  .poster img {
+    width: 100%;
+    bottom: 0;
+    position: absolute;
+  }
+}
+.no-video .video-container {
+  video {
+    display: none;
+  }
+  .poster {
+    display: block !important;
+  }
+}
+.touch .video-container {
+  video {
+    display: none;
+  }
+  .poster {
+    display: block !important;
+  }
 }
 
 .mobile-nav {
