--- a/sara_junio_16/scss/_styles.scss
+++ b/sara_junio_16/scss/_styles.scss
@@ -236,6 +236,7 @@ section{
     position: absolute;
     z-index: 2;
     bottom: 0;
+    top: 0;
     &.fillWidth {
       width: 100%;
     }
@@ -243,6 +244,7 @@ section{
   .poster img {
     width: 100%;
     bottom: 0;
+    top: 0;
     position: absolute;
   }
 }
@@ -273,7 +275,24 @@ footer {
   color: $medium-gray;
 }
 
+@include breakpoint(medium only) {
+  .video-container{
+    .filter{
+      //background: none !important;
+    }
+  }
+  video{
+    top: 0;
+    height: 100%;
+    width: auto !important;
+  }
+}
+
 @include breakpoint(small only) {
+  h1{
+    color: $dark-gray;
+    margin-top: rem-calc(40);
+  }
   .mobile-nav{
     background-color: rgba(255,255,255,0.8);
     height: rem-calc(70);
