--- a/violetaestudio_2015-5.5.2/css/fonts.scss
+++ b/violetaestudio_2015-5.5.2/css/fonts.scss
@@ -5,7 +5,7 @@
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 300;
-  src: local("Nunito-Light"), url(http://fonts.gstatic.com/s/nunito/v7/1TiHc9yag0wq3lDO9cw0vpBw1xU1rKptJj_0jans920.woff2) format("woff2");
+  src: local("Nunito-Light"), url(https://fonts.gstatic.com/s/nunito/v7/1TiHc9yag0wq3lDO9cw0vpBw1xU1rKptJj_0jans920.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -15,7 +15,7 @@
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 400;
-  src: local("Nunito-Regular"), url(http://fonts.gstatic.com/s/nunito/v7/6TbRXKWJjpj6V2v_WyRbMevvDin1pK8aKteLpeZ5c0A.woff2) format("woff2");
+  src: local("Nunito-Regular"), url(https://fonts.gstatic.com/s/nunito/v7/6TbRXKWJjpj6V2v_WyRbMevvDin1pK8aKteLpeZ5c0A.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -25,7 +25,7 @@
   font-family: 'Nunito';
   font-style: normal;
   font-weight: 700;
-  src: local("Nunito-Bold"), url(http://fonts.gstatic.com/s/nunito/v7/TttUCfJ272GBgSKaOaD7KpBw1xU1rKptJj_0jans920.woff2) format("woff2");
+  src: local("Nunito-Bold"), url(https://fonts.gstatic.com/s/nunito/v7/TttUCfJ272GBgSKaOaD7KpBw1xU1rKptJj_0jans920.woff2) format("woff2");
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
@@ -34,7 +34,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 100;
-  src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wLIUjMgeEa0akjNnRDJ5OSA.woff2) format('woff2');
+  src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(https://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wLIUjMgeEa0akjNnRDJ5OSA.woff2) format('woff2');
   unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 // latin-ext 
@@ -42,7 +42,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 100;
-  src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wF19lPr_M5u0SZOsLIZJNh8.woff2) format('woff2');
+  src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(https://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wF19lPr_M5u0SZOsLIZJNh8.woff2) format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 // latin 
@@ -50,7 +50,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 100;
-  src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(http://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wNKT0E3VAiFQm6Fsw40EoXw.woff2) format('woff2');
+  src: local('Yantramanav Thin'), local('Yantramanav-Thin'), url(https://fonts.gstatic.com/s/yantramanav/v1/Rs1I2PF4Z8GAb6qjgvr8wNKT0E3VAiFQm6Fsw40EoXw.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 // devanagari 
@@ -58,7 +58,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 300;
-  src: local('Yantramanav Light'), local('Yantramanav-Light'), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bGL7gfUuvpSx2m1LFFgjvxY.woff2) format('woff2');
+  src: local('Yantramanav Light'), local('Yantramanav-Light'), url(https://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bGL7gfUuvpSx2m1LFFgjvxY.woff2) format('woff2');
   unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 // latin-ext 
@@ -66,7 +66,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 300;
-  src: local('Yantramanav Light'), local('Yantramanav-Light'), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bNDnm4qiMZlH5rhYv_7LI2Y.woff2) format('woff2');
+  src: local('Yantramanav Light'), local('Yantramanav-Light'), url(https://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bNDnm4qiMZlH5rhYv_7LI2Y.woff2) format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 // latin 
@@ -74,7 +74,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 300;
-  src: local('Yantramanav Light'), local('Yantramanav-Light'), url(http://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bNTIkQYohD4BpHvJ3NvbHoA.woff2) format('woff2');
+  src: local('Yantramanav Light'), local('Yantramanav-Light'), url(https://fonts.gstatic.com/s/yantramanav/v1/HSfbC4Z8I8BZ00wiXeA5bNTIkQYohD4BpHvJ3NvbHoA.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 // devanagari 
@@ -82,7 +82,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 400;
-  src: local('Yantramanav'), local('Yantramanav-Regular'), url(http://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7Pkqa6bqz2MWWNAbes-nCbE.woff2) format('woff2');
+  src: local('Yantramanav'), local('Yantramanav-Regular'), url(https://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7Pkqa6bqz2MWWNAbes-nCbE.woff2) format('woff2');
   unicode-range: U+02BC, U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200B-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
 }
 // latin-ext 
@@ -90,7 +90,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 400;
-  src: local('Yantramanav'), local('Yantramanav-Regular'), url(http://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7KE8kM4xWR1_1bYURRojRGc.woff2) format('woff2');
+  src: local('Yantramanav'), local('Yantramanav-Regular'), url(https://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7KE8kM4xWR1_1bYURRojRGc.woff2) format('woff2');
   unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
 // latin 
@@ -98,7 +98,7 @@
   font-family: 'Yantramanav';
   font-style: normal;
   font-weight: 400;
-  src: local('Yantramanav'), local('Yantramanav-Regular'), url(http://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7Igp9Q8gbYrhqGlRav_IXfk.woff2) format('woff2');
+  src: local('Yantramanav'), local('Yantramanav-Regular'), url(https://fonts.gstatic.com/s/yantramanav/v1/E1Z7InSGFB89Npehsy0O7Igp9Q8gbYrhqGlRav_IXfk.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
