--- a/sara_junio_16/scss/_styles.scss
+++ b/sara_junio_16/scss/_styles.scss
@@ -238,7 +238,7 @@ section{
     bottom: 0;
     top: 0;
     width: auto !important;
-    height: 100%;
+    height: auto;
     &.fillWidth {
       width: 100%;
     }
@@ -284,7 +284,7 @@ footer {
     }
     video{
       top: 0;
-      height: 100%;
+      height: auto;
       width: auto !important;
     }
   }
